--- a/analina/styles/style_site_plan_analina.css
+++ b/analina/styles/style_site_plan_analina.css
@@ -1,10 +1,7 @@
-/* if you are using any Google fonts change the font names below to your fonts. 
-Any spaces in your font name should be replaced with a +. 
-Fonts are separated by a | */
+/* Google fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display&display=swap");
-
 :root {
-  /* change the values below to your colors from your palette */
+  /* Colors Palette */
   --primary-color: #ffffff;
   --secondary-color: #000000;
   --accent1-color: #EBBFD7;
@@ -13,11 +10,9 @@ Fonts are separated by a | */
   --accent4-color: #C4EDB3;
   --heading-font: "Playfair Display";
   --paragraph-font: "Montserrat, Helvetica, sans-serif";
-
-  /* change the values below to your chosen font(s) */
+  /* font */
   --heading-font: "Playfair Display";
   --paragraph-font: "Montserrat, Helvetica, sans-serif";
-
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #000000;  /* headlines on a white background */ 
   --headline-color-on-color: #000000; /* headlines on a colored background */ 
@@ -29,7 +24,6 @@ Fonts are separated by a | */
   --nav-hover-link-color: #000000;
   --nav-hover-background-color: #ffffff;
 }
-/*  Look around below...but DON'T CHANGE ANYTHING! */
 body {
   max-width: 1200px;
   margin: 0 auto;
@@ -66,25 +60,28 @@ header {
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
-
 p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
   padding: 1em;
 }
+/* Table of colors */
 .colors {
   width: 100%;
   min-width: 350px;
   margin: 30px auto;
   text-align: center;
 }
+/* Color de relleno*/
 .colors th {
   background-color: #ffffff;
 }
+/* Size */
 .colors td{
   width: 25%;
   height: 3em;
 }
+/* Lista de colores */
 .primary {
   background-color: var(--primary-color);
 }
@@ -103,7 +100,7 @@ p {
 .accent4 {
   background-color: var(--accent4-color);
 }
-
+/* Color del parrafo */
 p.colored {
   background-color: var(--paragraph-background-color);
   color: var(--paragraph-color-on-color);
