--- a/analina/styles/style_site_plan_analina.css
+++ b/analina/styles/style_site_plan_analina.css
@@ -4,10 +4,10 @@
   /* Colors Palette */
   --primary-color: #ffffff;
   --secondary-color: #000000;
-  --accent1-color: #EBBFD7;
-  --accent2-color: #FBF0A4;
-  --accent3-color: #A5DEFF;
-  --accent4-color: #C4EDB3;
+  --accent1-color: #ebbfd7;
+  --accent2-color: #fbf0a4;
+  --accent3-color: #c4edb3;
+  --accent4-color: #a5deff;
   --heading-font: "Playfair Display";
   --paragraph-font: "Montserrat, Helvetica, sans-serif";
   /* font */
