--- a/challenge_2/styles/styles-challenge-two.css
+++ b/challenge_2/styles/styles-challenge-two.css
@@ -1,31 +1,19 @@
 #content {
     max-width: 1600px;
     margin: 0 auto;
-    background-color: gray;
   }
 .imagen-cabecera {
     width: 100%;
 }
-
-.flex-container {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-
-.flex-item {
-  display: flex;
-  padding: 30px;
-  margin: 30px;
-  flex: 1;
-  width: 300px;
-  height: 300px;
-}
 .circle {
-    border-radius:50%;
-    background: darkslategrey;
-    padding: 20px;
+  border-radius:50%;
+  background: darkslategrey;
+  padding: 3%;
+  width: 50%;
+  margin: 20%;
+}
+.container {
+display: flex;
+justify-content: center;
+background-color: gray;
 }
