--- a/challengue_4/styles/styles_challengue_4.css
+++ b/challengue_4/styles/styles_challengue_4.css
@@ -2,31 +2,33 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Playfair+Display&display=swap");
 :root
 body {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 4em;
-  font-size: 18px;
-  text-align: center;
   background-color: #000000;
 }
 .contenedor {
   display: grid;
-  grid-template-columns: 1fr, 1fr, 1fr;
-  grid-template-rows: 1fr, 1fr, 1fr;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(3,1fr);
+  max-width: 400px;
   background-color: #ffffff;
-  border-radius: 5%;
- 
+  border-radius: 30px;
+  overflow: hidden;
+  margin: 0 auto;
 }
-.imagen {
+.imagen_contenedor {
+  grid-column: 1/4;
+  grid-row: 1/2;
+}
+.image_p {
   width: 100%;
-  border-start-start-radius: 5%;
 }
 .texto {
+  grid-column: 1/4;
+  grid-row: 2/3;
   text-align: center;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: montserrat;
-  color: 000000;
+  color: #000000;
 }
 p {
   font-family: var(--paragraph-font);
