--- a/challengue_4/styles/styles_challengue_4.css
+++ b/challengue_4/styles/styles_challengue_4.css
@@ -42,20 +42,14 @@ p {
   color: rgb(57, 130, 255)
 }
 .read {
-  grid-column: 1/2;
-  grid-row: 3/4;
-  background-color: rgb(57, 130, 255);
-  color: #ffffff;
+  display: flex;
+  max-width: 510px;
 }
-.views {
-  grid-column: 2/3;
-  grid-row: 3/4;
-  background-color: rgb(57, 130, 255);
+.grid-item {
+  background-color: rgb(43, 98, 193);
   color: #ffffff;
-}
-.comment {
-  grid-column: 3/4;
-  grid-row: 3/4;
-  background-color: rgb(57, 130, 255);
-  color: #ffffff;
+  border: 1px solid grey;
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
 }
