--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -18,7 +18,7 @@ h4 {
 #content {
     max-width: 1600px;
     margin: 0 auto;
-  }
+}
 body {
     background-color: #ffffff;
     font-size: 22px;
@@ -32,9 +32,6 @@ header {
 }
 /* Element Alignment */
 #hero-msg h1, #hero-msg h4 {
-    text-align: center;
-}
-#caption-msg {
     text-align: center;
 }
 .button-box {
@@ -95,10 +92,6 @@ nav a {
     font-size: 2em;
     margin-top: 10px;
 }
-.home-grid{
-    display: grid;
-    grid-template-columns: repeat(10,1fr);
-}
 /* Esta es una caja que contine la imagen*/
 #background {
     height: 725px;
@@ -129,22 +122,6 @@ nav a {
 .book:hover, .join:hover {
     background-color: #2D7FC9;
     color: #ffffff;
-    border-radius: 5px;
-}
-.more-button {
-    background-color: #2D7FC9;
-    color: #ffffff;
-    text-align: center;
-    text-decoration: none;
-    font-family: Oswald, Helvetica, sans-serif;
-    font-size: 18px;
-    padding: 15px 30px;
-    margin-top: 50px;
-    border-radius: 5px;
-}
-.more-button:hover {
-    background-color: #ffffff;
-    color: #2D7FC9;
     border-radius: 5px;
 }
 /* Esto es el parrafo que esta coloreado*/
@@ -196,20 +173,9 @@ footer .social img {
     padding-top: 15px; 
 }
 /*Ajustes de imagenes*/
-.skykomish-card{
-    margin: 200px 0;
-    grid-column: 2/4;
-    grid-row: 2/3;
-} 
-.leavenworth-card{
-    margin: 200px 0;
-    grid-column: 5/7;
-    grid-row: 2/3;
-} 
-.wenatchee-card {
-    margin: 200px 0;
-    grid-column: 8/10;
-    grid-row: 2/3;
+.home-grid{
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
 }
 .rivers-card{
     margin: 200px 0;
@@ -246,6 +212,47 @@ main section img {
     grid-row: 5/8;
     box-shadow: 5px 5px 10px #000000;
 }
+/*Specific for the Trips Page Style*/
+.trip-grid{
+    display: grid;
+    grid-template-columns: repeat(10,1fr);
+}
+.caption-msg {
+    text-align: center;
+    grid-column: 2/10;
+    grid-row: 1/2;
+}
+.skykomish-card{
+    margin: 50px 0;
+    grid-column: 2/4;
+    grid-row: 2/3;
+} 
+.leavenworth-card{
+    margin: 50px 0;
+    grid-column: 5/7;
+    grid-row: 2/3;
+} 
+.wenatchee-card {
+    margin: 50px 0;
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+.more-button {
+    background-color: #2D7FC9;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    font-family: Oswald, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+.more-button:hover {
+    background-color: #ffffff;
+    color: #2D7FC9;
+    border-radius: 5px;
+}
 /* Responsive design*/
 @media screen and (max-width: 900px) {
     .book {
@@ -259,7 +266,7 @@ main section img {
     header {
         background-color: #2D7FC9;
     } 
-    #hero, .home-grid {
+    #hero, .home-grid, .trip-grid {
         display: block;
         height: auto;
     }
@@ -283,7 +290,16 @@ main section img {
         font-size: 25px;
         color: #ffffff;
     }
+    .caption-msg h2 {
+        font-size: 25px;
+        color: #000000;
+        padding-top: 30px;
+    }
     .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    .skykomish-card, .leavenworth-card, .wenatchee-card { 
         margin: 50px auto;
         width: 60%;
     }
