--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -213,6 +213,14 @@ main section img {
     box-shadow: 5px 5px 10px #000000;
 }
 /*Specific for the Trips Page Style*/
+.image-essentials {
+    grid-column: 2/6;
+    grid-row: 5/11; 
+}
+.image-e {
+    width: 100%;
+    text-align: center;
+}
 .trip-grid{
     display: grid;
     grid-template-columns: repeat(10,1fr);
@@ -236,6 +244,7 @@ main section img {
     grid-row: 5/10;
     padding: 20px;
     text-align: left;
+    width: 100%;
 }
 .skykomish-card{
     margin: 50px 0;
