--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -149,7 +149,7 @@ footer {
     background-image: linear-gradient(90deg, #2D7FC9, #ffffff);
     color: #000000;
     padding: 25px 50px;
-    margin-top: 200px;
+    margin-top: 50px;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -288,14 +288,12 @@ main section img {
 }
 /* Feedback */
 #feedback {
-    background-color: antiquewhite;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: .5em;
+    background-color: #ffffff;
+    padding: 30px;
+    text-align: center;
     /* make this element invisible until we are ready for it */
-    display: none;      
+    display: none;
+    font-family: Oswald, Helvetica, sans-serif;     
 }
 .moveDown {
     margin-top: 3em;
@@ -307,65 +305,52 @@ form {
     width: 300px;
     /* Form outline */
     padding: 1em;
-    border: 1px solid #ccc;
+    border: 1px solid #EE3224;
     border-radius: 1em;
-  }
-  
-  ul {
+  } 
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
-  }
-  
-  form li + li {
+}
+form li + li {
     margin-top: 1em;
-  }
-  
-  label {
+}  
+label {
     /* Uniform size & alignment */
     display: inline-block;
     width: 90px;
     text-align: right;
-  }
-  
-  input,
-  textarea {
+}  
+input, textarea {
     /* To make sure that all text fields have the same font settings
        By default, textareas have a monospace font */
-    font: 1em sans-serif;
-  
+    font: 1em 'Open sans', Helvetica, sans-serif;
     /* Uniform text field size */
     width: 300px;
     box-sizing: border-box;
-  
     /* Match form field borders */
     border: 1px solid #999;
-  }
-  
-  input:focus,
-  textarea:focus {
+}
+input:focus, textarea:focus {
     /* Additional highlight for focused elements */
     border-color: #000;
-  }
-  
-  textarea {
+}
+textarea {
     /* Align multiline text fields with their labels */
     vertical-align: top;
-  
     /* Provide space to type some text */
     height: 5em;
-  }
-  
-  .button {
+} 
+.button {
     /* Align buttons with the text fields */
     padding-left: 90px; /* same size as the label elements */
-  }
-  
-  button {
+} 
+button {
     /* This extra margin represent roughly the same space as the space
        between the labels and their text fields */
     margin-left: 0.5em;
-  }
+}
 /* Responsive design*/
 @media screen and (max-width: 900px) {
     .book {
