--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -34,10 +34,9 @@ p {
     padding: 1em;
 }
 body {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 4em;
     font-size: 18px;
+    margin: 0;
+    padding: 0;
     text-align: center;
     color: var(--secondary-color);
     background-image: linear-gradient(90deg, var(--accent1-color), var(--accent2-color), var(--accent3-color), var(--accent4-color));
