--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -38,7 +38,7 @@ body {
     margin: 0;
     padding: 0;
     text-align: center;
-    color: var(--secondary-color);
+    color: var(--accent1-color);
     background-image: linear-gradient(90deg, var(--accent1-color), var(--accent2-color), var(--accent3-color), var(--accent4-color));
 }
 #content {
