--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -8,9 +8,7 @@
   --accent2-color: #fbf0a4;
   --accent3-color: #c4edb3;
   --accent4-color: #a5deff;
-  --heading-font: "Playfair Display";
-  --paragraph-font: "Montserrat, Helvetica, sans-serif";
-  /* font */
+  /* fonts */
   --heading-font: "Playfair Display";
   --paragraph-font: "Montserrat, Helvetica, sans-serif";
   /* these colors below should be chosen from among your palette colors above */
