--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -71,6 +71,34 @@ nav a {
     font-family: var(--heading-font);
     padding: 35px;
 }
+footer {
+    background-color: var(--primary-color);
+    padding: 10px 10px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+footer a {
+    color: #000000;
+    text-decoration: none;
+}
+footer a:hover {
+    color: #ffffff;
+}
+footer p {
+    font-size: 1.2em;
+    text-align: center;
+}
+footer p a:hover {
+    text-decoration: underline;
+}
+footer .social img {
+    padding-top: 15px; 
+}
+footer .social img {
+    padding-top: 15px; 
+}
 @media screen and (max-width: 900px) {
     nav, footer {
         flex-direction: column;
@@ -78,5 +106,8 @@ nav a {
     nav a {
         display: block;
         padding: 15px;
+    }
+    nav, footer {
+        flex-direction: column;
     }
 }
