--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -74,49 +74,56 @@ nav a {
 .main-about-me {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: repeat(6,1fr);
     padding: 15px;
 }
 .main-1-element-about-me{
     background-color: var(--primary-color);
     grid-column: 1/3;
     grid-row: 1/2;
+    margin: 10px;
 }
 .main-2-element-about-me{
     background-color: var(--primary-color);
     grid-column: 3/5;
     grid-row: 1/2;
+    margin: 10px;
 }
 .main-3-element-about-me{
     grid-column: 1/5;
     grid-row: 2/3;
     align-self: center;
     justify-self: center;
+    margin: 10px;
 }
 .img-about-me {
     max-width: 300px;
     border-radius:50%;
     background-color: var(--primary-color);
+    margin: 10px;
   }
 .main-4-element-about-me{
     background-color: var(--primary-color);
     grid-column: 1/3;
     grid-row: 3/6;
+    margin: 10px;
 }
 .main-5-element-about-me{
     background-color: var(--primary-color);
     grid-column: 3/4;
     grid-row: 3/7;
+    margin: 10px;
 }
 .main-6-element-about-me{
     background-color: var(--primary-color);
     grid-column: 4/5;
     grid-row: 3/7;
+    margin: 10px;
 }
 .main-7-element-about-me{
     background-color: var(--primary-color);
     grid-column: 1/3;
     grid-row: 6/7;
+    margin: 10px;
 }
 footer {
     background-color: var(--primary-color);
