--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -124,7 +124,11 @@ nav a {
     grid-column: 1/3;
     grid-row: 6/7;
     margin: 10px;
+    overflow: hidden;
 }
+.img-gatito {
+    width: 100%;
+  }
 footer {
     background-color: var(--primary-color);
     margin-top: 50px;
