--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -88,6 +88,23 @@ nav a {
     grid-row: 1/2;
     margin: 10px;
 }
+main p {
+    font-size: 1.2em;
+    text-align: center;
+}
+main p a:hover {
+    text-decoration: none;
+}
+main a {
+    color: #000000;
+    text-decoration: none;
+}
+main a:hover {
+    color: #ffffff;
+    background-color: #000000;
+    padding: 10px;
+    border-radius: 15px;
+}
 .main-3-element-about-me{
     grid-column: 1/5;
     grid-row: 2/3;
@@ -160,7 +177,7 @@ footer p {
     text-align: center;
 }
 footer p a:hover {
-    text-decoration: underline;
+    text-decoration: none;
 }
 footer a {
     color: #000000;
@@ -168,7 +185,9 @@ footer a {
 }
 footer a:hover {
     color: #ffffff;
-    text-shadow: 1px 1px 2px #000000, 0 0 1em #000000, 0 0 0.2em #000000;
+    background-color: #000000;
+    padding: 10px;
+    border-radius: 15px;
 }
 @media screen and (max-width: 900px) {
     nav, footer {
