--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -92,18 +92,16 @@ main p {
     font-size: 1.2em;
     text-align: center;
 }
-main p a:hover {
-    text-decoration: none;
-}
-main a {
+main p a {
     color: #000000;
     text-decoration: none;
 }
-main a:hover {
+main p a:hover {
     color: #ffffff;
     background-color: #000000;
     padding: 10px;
     border-radius: 15px;
+    text-decoration: none;
 }
 .main-3-element-about-me{
     grid-column: 1/5;
@@ -176,14 +174,11 @@ footer p {
     font-size: 1.2em;
     text-align: center;
 }
-footer p a:hover {
-    text-decoration: none;
-}
-footer a {
+footer p a {
     color: #000000;
     text-decoration: none;
 }
-footer a:hover {
+footer p a:hover {
     color: #ffffff;
     background-color: #000000;
     padding: 10px;
