--- a/challenge-5/styles/style-challenge-5.css
+++ b/challenge-5/styles/style-challenge-5.css
@@ -1,20 +1,23 @@
-content {
-    max-width: 1600px;
+#content {
+    max-width: 1000px;
     margin: 0 auto;
+    padding: 30px;
 }
 section {
-    width: 400px;
-    border: 1px solid;
+    width: 50%;
 }
 .block1 {
-    margin: 50px 100px 0px;
+    border: 1px solid;
 }
 .block2 {
-    margin: 0px 300px;  
+    border: 1px solid;
+    margin: 0 auto; 
 }
 .block3 {
-    margin: 0px 500px; 
+    border: 1px solid;
+    margin-left: auto;
 }
 .block4 {
-    margin: 0px 250px; 
+    border: 1px solid;
+    margin: 0 auto;
 }
