--- a/challenge-5/styles/style-challenge-5.css
+++ b/challenge-5/styles/style-challenge-5.css
@@ -21,3 +21,12 @@ section {
     border: 1px solid;
     margin: 0 auto;
 }
+p:nth-of-type(1) {
+    text-align: left;
+}
+p:nth-of-type(2) {
+    text-align: center;
+}
+p:nth-of-type(3) {
+    text-align: right;
+}
