--- a/challenge-5/styles/style-challenge-5.css
+++ b/challenge-5/styles/style-challenge-5.css
@@ -21,6 +21,15 @@ section {
     border: 1px solid;
     margin: 0 auto;
 }
+.block4 p:nth-of-type(1) {
+    text-align: right;
+}
+.block4 p:nth-of-type(2) {
+    text-align: center;
+}
+.block4 p:nth-of-type(3) {
+    text-align: left;
+}
 p:nth-of-type(1) {
     text-align: left;
 }
