--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -183,15 +183,75 @@ footer p a:hover {
     background-color: #000000;
     padding: 15px;
 }
+/* home page styles */
+.main-home{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(5,1fr);
+    align-items: center;
+}
+.main-1-element-home {
+    grid-row: 1/2;
+    grid-column: 1/4;
+    margin: 20px;
+}
 .img-home-page {
     border-radius: 50%;
-    margin: 40px;
     box-shadow: 1px 1px 2px #000000, 0 0 1em #000000, 0 0 0.2em #000000;
-
+}
+.img-projects {
+    width: 80%;
 }
 .main-2-element-home {
+    grid-row: 2/3;
+    grid-column: 1/4;
     background-color: var(--primary-color);
-    padding: 20px;
+    margin: 20px;
+}
+.main-3-element-home {
+    grid-row: 3/4;
+    grid-column: 1/2;
+    margin: 20px;
+}
+.main-4-element-home {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    margin: 20px;
+}
+.main-5-element-home {
+    grid-row: 3/4;
+    grid-column: 3/4;
+    margin: 20px;
+}
+.main-6-element-home {
+    grid-row: 4/5;
+    grid-column: 1/2;
+    margin: 20px;
+}
+.main-7-element-home {
+    grid-row: 4/5;
+    grid-column: 2/3;
+    margin: 20px;
+}
+.main-8-element-home {
+    grid-row: 4/5;
+    grid-column: 3/4;
+    margin: 20px;
+}
+.main-9-element-home {
+    grid-row: 5/6;
+    grid-column: 1/2;
+
+}
+.main-10-element-home {
+    grid-row: 5/6;
+    grid-column: 2/3;
+
+}
+.main-11-element-home {
+    grid-row: 5/6;
+    grid-column: 3/4;
+
 }
 @media screen and (max-width: 900px) {
     nav, footer {
