--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -178,6 +178,7 @@ footer p a:hover {
     grid-row: 1/2;
     grid-column: 1/4;
     margin-top: 20px;
+    padding: 10px;
 }
 .img-home-page {
     border-radius: 50%;
@@ -190,40 +191,53 @@ footer p a:hover {
     grid-column: 1/4;
     background-color: var(--primary-color);
     margin: 20px;
+    padding: 10px;
+
 }
 .main-3-element-home {
     grid-row: 3/4;
     grid-column: 1/2;
     margin: 20px;
+    padding: 10px;
+
 }
 .main-4-element-home {
     grid-row: 3/4;
     grid-column: 2/3;
     margin: 20px;
+    padding: 10px;
+
 }
 .main-5-element-home {
     grid-row: 3/4;
     grid-column: 3/4;
     margin: 20px;
     background-color: var(--primary-color);
+    padding: 10px;
 }
 .main-6-element-home {
     grid-row: 4/5;
     grid-column: 1/2;
     margin: 20px;
     background-color: var(--primary-color);
+    padding: 10px;
+
 }
 .main-7-element-home {
     grid-row: 4/5;
     grid-column: 2/3;
     margin: 20px;
     background-color: var(--primary-color);
+    padding: 10px;
+
 }
 .main-8-element-home {
     grid-row: 4/5;
     grid-column: 3/4;
     margin: 20px;
     background-color: var(--primary-color);
+    padding: 10px;
+
 }
 .main-9-element-home {
     grid-row: 5/6;
