--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -131,7 +131,7 @@ nav a {
   }
 footer {
     background-color: var(--primary-color);
-    margin-top: 50px;
+    margin: 1px;
     align-items: center;
     justify-items: center;
     display: grid;
@@ -172,14 +172,13 @@ footer p a:hover {
 .main-home{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-    align-items: center;
-    justify-self: center;
 }
+/* Dibujo de Niki */
 .main-1-element-home {
     grid-row: 1/2;
     grid-column: 1/4;
-    margin-top: 20px;
     padding: 10px;
+    margin: 1px;
 }
 .img-home-page {
     border-radius: 50%;
@@ -187,68 +186,99 @@ footer p a:hover {
 .img-projects {
     width: 100%;
 }
+/* Titulo de la pagina */
 .main-2-element-home {
     grid-row: 2/3;
     grid-column: 1/4;
     background-color: var(--primary-color);
-    margin: 20px;
     padding: 10px;
+    margin: 1px;
 }
+/* Doma foto */
 .main-3-element-home {
     grid-row: 3/4;
     grid-column: 1/2;
+    background-color: var(--primary-color);
+    margin: 1px;
     padding: 10px;
-    background-color: white;
-}
-.main-4-element-home {
-    grid-row: 3/4;
-    grid-column: 2/3;
-    padding: 10px;
-    background-color: white;
-
-
-}
-.main-5-element-home {
-    grid-row: 3/4;
-    grid-column: 3/4;
-    padding: 10px;
-    background-color: white;
 
 }
 .main-6-element-home {
     grid-row: 4/5;
     grid-column: 1/2;
     background-color: var(--primary-color);
-    padding: 10px;
-}
-.main-7-element-home {
-    grid-row: 4/5;
-    grid-column: 2/3;
-    background-color: var(--primary-color);
+    margin: 1px;
     padding: 10px;
 
-}
-.main-8-element-home {
-    grid-row: 4/5;
-    grid-column: 3/4;
-    background-color: var(--primary-color);
-    padding: 10px;
+
+    
 }
 .main-9-element-home {
     grid-row: 5/6;
     grid-column: 1/2;
     background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+
+
+}
+/* My Hair Foto */
+.main-4-element-home {
+    grid-row: 3/4;
+    grid-column: 2/3;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+
+
+}
+.main-7-element-home {
+    grid-row: 4/5;
+    grid-column: 2/3;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+
+
+}
+.main-5-element-home {
+    grid-row: 3/4;
+    grid-column: 3/4;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+
+
+}
+/* Your Design Foto */
+.main-8-element-home {
+    grid-row: 4/5;
+    grid-column: 3/4;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+
+
 }
 .main-10-element-home {
     grid-row: 5/6;
     grid-column: 2/3;
     background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+
+
 }
 .main-11-element-home {
     grid-row: 5/6;
     grid-column: 3/4;
     background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+
+
 }
+
 main p {
     font-size: 1.2em;
     text-align: center;
