--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -71,21 +71,6 @@ nav a {
     font-family: var(--heading-font);
     padding: 35px;
 }
-footer p, main p {
-    font-size: 1.2em;
-    text-align: center;
-}
-footer p a, main p a {
-    color: #000000;
-    text-decoration: none;
-}
-footer p a:hover, main p a:hover {
-    color: #ffffff;
-    background-color: #000000;
-    padding: 15px;
-    text-decoration: none;
-}
-/* About me page */
 .main-about-me {
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -170,56 +155,79 @@ footer {
 .social-icon {
     width: 80px; 
 }
+footer p {
+    font-size: 1.2em;
+    text-align: center;
+}
+footer p a {
+    color: #000000;
+    text-decoration: none;
+}
+footer p a:hover {
+    color: #ffffff;
+    background-color: #000000;
+    padding: 15px;
+}
 /* home page styles */
 .main-home{
     display: grid;
     grid-template-columns: repeat(3,1fr);
 }
 /* Dibujo de Niki */
-.main-1-element-home {
-    grid-row: 1/2;
-    grid-column: 1/4;
-    padding: 10px;
-    margin: 1px;
-}
-.img-home-page {
-    border-radius: 50%;
-}
 .img-projects {
     width: 100%;
 }
+main a {
+    color: #000000;
+    text-decoration: none;
+}
+main a:hover {
+    color: #ffffff;
+    background-color: #000000;
+    padding: 10px;
+    text-decoration: none;
+}
 /* Titulo de la pagina */
-.main-2-element-home {
-    grid-row: 2/3;
+.main-1-element-home {
+    grid-row: 1/2;
     grid-column: 1/4;
     background-color: var(--primary-color);
     padding: 10px;
     margin: 1px;
 }
 /* Doma foto */
-.main-3-element-home {
-    grid-row: 3/4;
+.main-2-element-home {
+    grid-row: 2/3;
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;
 }
-.main-6-element-home {
-    grid-row: 4/5;
+/* doma content*/
+.main-3-element-home {
+    grid-row: 3/4;
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;   
 }
-.main-9-element-home {
-    grid-row: 5/6;
+/* doma button*/
+.main-4-element-home {
+    grid-row: 4/5;
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;
 }
 /* My Hair Foto */
-.main-4-element-home {
+.main-5-element-home {
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+}
+.main-6-element-home {
     grid-row: 3/4;
     grid-column: 2/3;
     background-color: var(--primary-color);
@@ -233,30 +241,23 @@ footer {
     margin: 1px;
     padding: 10px;
 }
-.main-5-element-home {
+/* Your Design Foto */
+.main-8-element-home {
+    grid-row: 2/3;
+    grid-column: 3/4;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+}
+.main-9-element-home {
     grid-row: 3/4;
     grid-column: 3/4;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;
 }
-/* Your Design Foto */
-.main-8-element-home {
-    grid-row: 4/5;
-    grid-column: 3/4;
-    background-color: var(--primary-color);
-    margin: 1px;
-    padding: 10px;
-}
 .main-10-element-home {
-    grid-row: 5/6;
-    grid-column: 2/3;
-    background-color: var(--primary-color);
-    margin: 1px;
-    padding: 10px;
-}
-.main-11-element-home {
-    grid-row: 5/6;
+    grid-row: 4/5;
     grid-column: 3/4;
     background-color: var(--primary-color);
     margin: 1px;
