--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -71,89 +71,15 @@ nav a {
     font-family: var(--heading-font);
     padding: 35px;
 }
-.main-about-me {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    padding: 15px;
-}
-.main-1-element-about-me{
-    background-color: var(--primary-color);
-    grid-column: 1/3;
-    grid-row: 1/2;
-    margin: 10px;
-}
-.main-2-element-about-me{
-    background-color: var(--primary-color);
-    grid-column: 3/5;
-    grid-row: 1/2;
-    margin: 10px;
-}
-.main-3-element-about-me{
-    grid-column: 1/5;
-    grid-row: 2/3;
-    align-self: center;
-    justify-self: center;
-    margin: 10px;
-}
-.img-about-me {
-    max-width: 300px;
-    border-radius:50%;
-    background-color: var(--primary-color);
-    margin: 10px;
-  }
-.main-4-element-about-me{
-    background-color: var(--primary-color);
-    grid-column: 1/3;
-    grid-row: 3/6;
-    margin: 10px;
-}
-.main-5-element-about-me{
-    background-color: var(--primary-color);
-    grid-column: 3/4;
-    grid-row: 3/7;
-    margin: 10px;
-}
-.main-6-element-about-me{
-    background-color: var(--primary-color);
-    grid-column: 4/5;
-    grid-row: 3/7;
-    margin: 10px;
-}
-.main-7-element-about-me{
-    background-color: var(--primary-color);
-    grid-column: 1/3;
-    grid-row: 6/7;
-    margin: 10px;
-    overflow: hidden;
-}
-.img-gatito {
-    width: 100%;
-  }
+/*...........................Footer.................................*/
 footer {
     background-color: var(--primary-color);
     margin: 1px;
+    display: flex;
+    justify-content: space-around;
     align-items: center;
-    justify-items: center;
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-}
-.footer-1-element {
-    grid-column: 1/3;
-}
-.footer-2-element {
-    grid-column: 3/4;
-}
-.footer-3-element {
-    grid-column: 4/5;
-}
-.footer-4-element {
-    grid-column: 5/6;
-}
-.footer-5-element {
-    grid-column: 6/7;
-}
-.social-icon {
-    width: 80px; 
+    flex-direction: column;
+    padding-bottom: 40px;
 }
 footer p {
     font-size: 1.2em;
@@ -168,12 +94,20 @@ footer p a:hover {
     background-color: #000000;
     padding: 15px;
 }
-/* home page styles */
+.social-icon {
+    width: 80px;
+    padding-top: 10px;
+}
+/*........................Home Page Styles.............................*/
+.copy {
+    background-color: var(--primary-color);
+    margin: 1px;
+}
 .main-home{
     display: grid;
     grid-template-columns: repeat(3,1fr);
 }
-/* Dibujo de Niki */
+/* Ajustes Generales */
 .img-projects {
     width: 100%;
 }
@@ -263,24 +197,66 @@ main a:hover {
     margin: 1px;
     padding: 10px;
 }
+/*..........................About me styles..........................*/
+.main-about-me {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    padding: 15px;
+}
+.main-1-element-about-me{
+    background-color: var(--primary-color);
+    grid-column: 1/3;
+    grid-row: 1/2;
+    margin: 10px;
+}
+.main-2-element-about-me{
+    background-color: var(--primary-color);
+    grid-column: 3/5;
+    grid-row: 1/2;
+    margin: 10px;
+}
+.main-3-element-about-me{
+    grid-column: 1/5;
+    grid-row: 2/3;
+    align-self: center;
+    justify-self: center;
+    margin: 10px;
+}
+.img-about-me {
+    max-width: 300px;
+    border-radius:50%;
+    background-color: var(--primary-color);
+    margin: 10px;
+  }
+.main-4-element-about-me{
+    background-color: var(--primary-color);
+    grid-column: 1/3;
+    grid-row: 3/6;
+    margin: 10px;
+}
+.main-5-element-about-me{
+    background-color: var(--primary-color);
+    grid-column: 3/4;
+    grid-row: 3/7;
+    margin: 10px;
+}
+.main-6-element-about-me{
+    background-color: var(--primary-color);
+    grid-column: 4/5;
+    grid-row: 3/7;
+    margin: 10px;
+}
+.main-7-element-about-me{
+    background-color: var(--primary-color);
+    grid-column: 1/3;
+    grid-row: 6/7;
+    margin: 10px;
+    overflow: hidden;
+}
+.img-gatito {
+    width: 100%;
+}
 @media screen and (max-width: 900px) {
-    nav, footer {
-        flex-direction: column;
-    }
-    nav a {
-        display: block;
-        padding: 15px;
-    }
-    nav, footer {
-        flex-direction: column;
-    }
-    footer {
-        display: flex;
-        flex-wrap: wrap;
-        background-color: var(--primary-color);
-        background-size: 350px auto;
-        border-top: var(--secondary-color);
-    }
     .main-home {
         display: block;
         height: auto;
