--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -261,4 +261,11 @@ main a:hover {
         display: block;
         height: auto;
     }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    nav {
+        flex-direction: column;
+    }
 }
