--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -43,14 +43,17 @@ body {
     max-width: 1600px;
     margin: 0 auto;
 }
-header {
-    background-color:var(--primary-color);
+.header-grid {
     display: grid;
-    grid-template-columns: 150px auto;
 }
-#logo_link {   
-    padding-top: 5px;
-    justify-self: center;
+.header-1 {
+    grid-column: 1/2;
+    background-color: var(--primary-color);
+    margin: 1px;
+}
+.header-2{
+    grid-column: 2/3;
+    margin: 1px;
     align-self: center;
 }
 .logo {
@@ -96,25 +99,22 @@ footer p a:hover {
 }
 .footer-grid{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
 }
 .footer-1{
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
-    padding: 10px;
 }
 .footer-2{
     grid-column: 2/3;
     background-color: var(--primary-color);
     margin: 1px;
-    padding: 40px;
+    padding: 20px;
 }
 .footer-3{
     grid-column: 3/4;
     background-color: var(--primary-color);
     margin: 1px;
-    padding: 10px;
 }
 /*........................Home Page Styles.............................*/
 .main-home{
@@ -282,11 +282,11 @@ main a:hover {
     nav {
         flex-direction: column;
     }
-    footer {
-        display: flex;
-        flex-direction: column;
-    }
     .footer-2{
         padding: 10px;
+    }
+    .footer-grid{
+        display: flex;
+        flex-direction: column;
     }
 }
