--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -45,34 +45,47 @@ body {
 }
 .header-grid {
     display: grid;
+    text-wrap: wrap;
+    grid-template-columns: max-content;
 }
 .header-1 {
     grid-column: 1/2;
-    background-color: var(--primary-color);
-    margin: 1px;
 }
 .header-2{
     grid-column: 2/3;
     margin: 1px;
-    align-self: center;
+    background-color: var(--primary-color);
 }
 .logo {
     width: 80px;
 }
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
 }
 nav a:hover {
     background-color: var(--secondary-color);
     color: var(--primary-color);
 }
 nav a {
-    text-align: center;
     color: var(--secondary-color);
     text-decoration: none;
     font-family: var(--heading-font);
-    padding: 35px;
+}
+.a-1{
+    background-color: white;
+    padding: 30px;
+    margin: 1px;
+}
+.a-2{
+    background-color: white;
+    padding: 30px;
+    margin: 1px;
+}
+.a-3{
+    background-color: white;
+    padding: 30px;
+    margin: 1px;
 }
 /*...........................Footer.................................*/
 footer p {
@@ -275,18 +288,13 @@ main a:hover {
         display: block;
         height: auto;
     }
-    nav a {
-        display: block;
-        padding: 10px;
-    }
-    nav {
-        flex-direction: column;
-    }
-    .footer-2{
-        padding: 10px;
-    }
     .footer-grid{
         display: flex;
         flex-direction: column;
+    }
+    .header-grid {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
     }
 }
