--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -130,6 +130,9 @@ footer p a:hover {
     margin: 1px;
 }
 /*........................Home Page Styles.............................*/
+.imagen-main {
+    width: 50%;
+}
 .main-home{
     display: grid;
     grid-template-columns: repeat(3,1fr);
@@ -149,6 +152,7 @@ main a:hover {
     text-decoration: none;
 }
 /* Titulo de la pagina */
+/* Hello World*/
 .main-1-element-home {
     grid-row: 1/2;
     grid-column: 1/4;
@@ -156,38 +160,39 @@ main a:hover {
     padding: 10px;
     margin: 1px;
 }
-/* Doma foto */
+/* Titulo de la pagina */
 .main-2-element-home {
     grid-row: 2/3;
+    grid-column: 1/4;
+    background-color: var(--primary-color);
+    padding: 10px;
+    margin: 1px;
+}
+/* Doma foto */
+.main-3-element-home {
+    grid-row: 3/4;
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;
 }
 /* doma content*/
-.main-3-element-home {
-    grid-row: 3/4;
+.main-4-element-home {
+    grid-row: 4/5;
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;   
 }
 /* doma button*/
-.main-4-element-home {
-    grid-row: 4/5;
+.main-5-element-home {
+    grid-row: 5/6;
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;
 }
 /* My Hair Foto */
-.main-5-element-home {
-    grid-row: 2/3;
-    grid-column: 2/3;
-    background-color: var(--primary-color);
-    margin: 1px;
-    padding: 10px;
-}
 .main-6-element-home {
     grid-row: 3/4;
     grid-column: 2/3;
@@ -202,14 +207,14 @@ main a:hover {
     margin: 1px;
     padding: 10px;
 }
-/* Your Design Foto */
 .main-8-element-home {
-    grid-row: 2/3;
-    grid-column: 3/4;
+    grid-row: 5/6;
+    grid-column: 2/3;
     background-color: var(--primary-color);
     margin: 1px;
     padding: 10px;
 }
+/* Your Design Foto */
 .main-9-element-home {
     grid-row: 3/4;
     grid-column: 3/4;
@@ -219,6 +224,13 @@ main a:hover {
 }
 .main-10-element-home {
     grid-row: 4/5;
+    grid-column: 3/4;
+    background-color: var(--primary-color);
+    margin: 1px;
+    padding: 10px;
+}
+.main-11-element-home {
+    grid-row: 5/6;
     grid-column: 3/4;
     background-color: var(--primary-color);
     margin: 1px;
