--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -308,4 +308,7 @@ main a:hover {
         display: flex;
         flex-direction: column;
     }
+    nav {
+        flex-direction: column;
+    }
 }
