--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -91,15 +91,17 @@ nav a {
 footer p {
     font-size: 1.2em;
     text-align: center;
+    padding: 20px;
 }
 footer p a {
-    color: #000000;
+    color: var(--secondary-color);
     text-decoration: none;
+    padding: 20px;
 }
 footer p a:hover {
-    color: #ffffff;
-    background-color: #000000;
-    padding: 15px;
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+    padding: 20px;
 }
 .social{
     display: flex;
@@ -117,6 +119,7 @@ footer p a:hover {
     grid-column: 1/2;
     background-color: var(--primary-color);
     margin: 1px;
+    padding: 20px;
 }
 .footer-2{
     grid-column: 2/3;
@@ -129,9 +132,13 @@ footer p a:hover {
     background-color: var(--primary-color);
     margin: 1px;
 }
+.copy {
+    background-color: var(--primary-color);
+    margin: 1px;
+}
 /*........................Home Page Styles.............................*/
 .imagen-main {
-    width: 50%;
+    width: 60%;
 }
 .main-home{
     display: grid;
