--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -245,61 +245,57 @@ main a:hover {
 /*..........................About me styles..........................*/
 .main-about-me {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
-    padding: 15px;
 }
 .main-1-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 1/2;
-    margin: 10px;
+    margin: 1px;
 }
 .main-2-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 3/5;
+    grid-column: 2/4;
     grid-row: 1/2;
-    margin: 10px;
+    margin: 1px;
 }
 .main-3-element-about-me{
-    grid-column: 1/5;
+    grid-column: 1/4;
     grid-row: 2/3;
-    align-self: center;
-    justify-self: center;
-    margin: 10px;
+    background-color: var(--primary-color);
+    margin: 1px;
 }
 .img-about-me {
     max-width: 300px;
-    border-radius:50%;
-    background-color: var(--primary-color);
-    margin: 10px;
+    overflow: hidden;
+    text-align: left;
   }
 .main-4-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 1/3;
-    grid-row: 3/6;
-    margin: 10px;
+    grid-column: 1/2;
+    grid-row: 3/4;
+    margin: 1px;
 }
 .main-5-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 3/4;
-    grid-row: 3/7;
-    margin: 10px;
+    grid-column: 2/3;
+    grid-row: 3/5;
+    margin: 1px;
 }
 .main-6-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 4/5;
-    grid-row: 3/7;
-    margin: 10px;
+    grid-column: 3/4;
+    grid-row: 3/5;
+    margin: 1px;
 }
 .main-7-element-about-me{
     background-color: var(--primary-color);
-    grid-column: 1/3;
-    grid-row: 6/7;
-    margin: 10px;
+    grid-column: 1/2;
+    grid-row: 4/5;
+    margin: 1px;
     overflow: hidden;
 }
 .img-gatito {
-    width: 100%;
+    max-width: 300px;
 }
 @media screen and (max-width: 900px) {
     .main-home {
