--- a/analina/styles/styles.css
+++ b/analina/styles/styles.css
@@ -73,17 +73,17 @@ nav a {
 }
 .a-1{
     background-color: white;
-    padding: 30px;
+    padding: 30px 80px;
     margin: 1px;
 }
 .a-2{
     background-color: white;
-    padding: 30px;
+    padding: 30px 80px;
     margin: 1px;
 }
 .a-3{
     background-color: white;
-    padding: 30px;
+    padding: 30px 80px;
     margin: 1px;
 }
 /*...........................Footer.................................*/
